--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container">
         <div class="navbar-header">
           <div class="navbar-brand">
-            <a href="index.html"><h1>Food, LLC</h1></a>
+            <a href="index.html"><h1 class="text-center">Food, LLC</h1></a>
           </div>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -67,7 +67,7 @@
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="#header-nav">Go to Top.</a></p>
         </div>
         <div id="beef" class="col-md-12 col-sm-12 col-xs-12 col-xxs-12 c">
         <p class="mid">Beef</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -90,7 +90,7 @@
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="#header-nav">Go to Top.</a></p>
         </div>
         <div  id="sushi" class="col-md-12 col-sm-12 col-xs-12 col-xxs-12 c">
         <p class="mid">Sushi</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -113,7 +113,7 @@
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="#header-nav">Go to Top.</a></p>
         </div>
     </section>
   </div>
